Fix landing misaligning

--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .button {
