--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,9 +17,6 @@ a {
 body {
   background-color: var(--bg-color);
   color: var(--text-color-primary);
-  min-height: 100vh;
-  max-width: 1376px;
-  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
